# Matrix

./: Ai.c  Ai.h  CMakeLists.txt  Matrix.c  Matrix.h  Memory.c  Memory.h  README  Tester.c  main.c
.github/workflows/: cmake-multi-platform.yml
